--- a/cquence teste/index.html
+++ b/cquence teste/index.html
@@ -18,6 +18,26 @@
 
 		<div id="text2"></div>
 
+		<!-- segunda fase -->
+
+		<div id="text3"></div>
+
+		<div id="paragrafo1">
+			INSIRA O CUPOM FREE
+		</div>
+
+		<div id="paragrafo2">
+			NA FICHA DE INSCRI&Ccedil;&Atilde;O
+		</div>
+
+		<div id="paragrafo3">
+			E N&Atilde;O PAGUE A TAXA.
+		</div>
+
+		<div id="botao">
+			INSCREVA-SE
+		</div>
+
 	</div>
 
 	<script src="js/Cquence.js"></script>
